--- a/src/components/Categoria/styles.css
+++ b/src/components/Categoria/styles.css
@@ -1,6 +1,48 @@
-.categoria {
-  background-color: rebeccapurple;
-  position: relative;
+.categoria {  
+  position: relative;  
+  cursor: pointer;
+  border-radius: 2rem;
+}
+
+img {
+  object-fit: cover;
+  border-radius: 25px;
+  width: 250px;
+  height: 250px;
+  display: block;
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  
+
+  border-radius: 25px;
+  height: 100%;
   width: 100%;
-  height: 154px;
+  opacity: 1;
+  
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+.overlay > p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000,
+               1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;
+
+  color: rgb(0, 225, 255);
+  font-weight: bolder;
+  font-size: 3.5rem;
+  text-transform: uppercase;
+}
+
+a {
+  text-decoration: none;
 }
