--- a/src/components/Categorias/styles.css
+++ b/src/components/Categorias/styles.css
@@ -1,9 +1,19 @@
 .categorias{  
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: .8rem;
-
   max-width: 640px;
   min-width: 320px;
   margin: 0 auto;
+}
+
+.lista-categorias {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: .8rem;
+}
+
+.info-categorias {
+  padding: 2rem;
+  text-align: center;
+
+  font-size: 2.5rem;
+  font-weight: bold;  
 }
