--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #13141F;
-  --color-secondary: crimson;
+  --color-secondary: rgba(220, 20, 60, 0.529);
   --text-color-light: #ffffff;
   --text-color-dark: #000000;
 }
@@ -13,10 +13,15 @@
 
 html {
   font-size: 62.5%;
+  background-color: rgb(181, 172, 160);
 }
 
 body {
   font-size: 1.6rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+button {
+  cursor: pointer;
 }
 
